# press-release-collection

./: .env.example  .gcloudignore  .gitignore  BD_sdk_test.py  BIGQUERY_SCHEMA.md  CHANGELOG.md  COST_OPTIMIZATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ISSUE_RESOLUTION.md  DEPLOY_FROM_GITHUB.md  Dockerfile  IDEMPOTENCY_GUIDE.md  QUICKSTART_DEPLOYMENT.md  README.md  TROUBLESHOOTING.md  article_scraper.py  bigquery_storage.py  checkpointing.py  collect_results.py  config.py  deduplication.py  deploy.ps1  deploy.sh  final_df.csv  fix_cloudrun_secret.ps1  generate_queries.py  grab_reference_data.py  main.py  pyproject.toml  reference_data.csv  test_brightdata.py  trafilatura_test.py  verify_proxy.py
.claude/: settings.local.json
inputs/: company_information.csv  outlet_w_domain.csv
outputs/: enriched.csv  f100_collected_results.csv  f100_joined.csv  filtered_urls.csv  initial_collected_results.csv  joined.csv  scraper_errors.csv
