[project]
name = "press-release-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asent>=0.8.3",
    "brightdata-sdk>=2.1.1",
    "bs4>=0.0.2",
    "db-dtypes>=1.4.4",
    "google-cloud-bigquery>=3.40.0",
    "lxml-html-clean>=0.4.3",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "pip>=26.0.1",
    "pyarrow>=23.0.0",
    "setuptools>=82.0.0",
    "spacy>=3.8.11",
]
