[project]
name = "press-release-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asent>=0.8.3",
    "brightdata-sdk>=2.1.1",
    "bs4>=0.0.2",
    "cloudscraper>=1.2.71",
    "db-dtypes>=1.4.4",
    "functions-framework>=3.5.0",
    "google-cloud-bigquery>=3.40.0",
    "goose3>=3.1.21",
    "lxml-html-clean>=0.4.3",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "pip>=26.0.1",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.0.0",
    "readability-lxml>=0.8.4.1",
    "setuptools>=82.0.0",
    "spacy>=3.8.11",
    "tqdm>=4.67.3",
    "trafilatura>=2.0.0",
]
